syntax = "proto3";

package hipstershop;

// Importing the necessary gRPC and Google API annotations.
import "google/api/annotations.proto";

service CartService {
  // Existing service methods
  rpc AddItem(AddItemRequest) returns (Empty) {}
  rpc GetCart(GetCartRequest) returns (Cart) {}
  rpc EmptyCart(EmptyCartRequest) returns (Empty) {}

  // New service method to get the cart total with possible discount
  rpc GetCartTotalWithDiscount(GetCartTotalWithDiscountRequest) returns (GetCartTotalWithDiscountResponse) {}
}

// Existing message definitions
message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message AddItemRequest {
  string user_id = 1;
  CartItem item = 2;
}

message EmptyCartRequest {
  string user_id = 1;
}

message GetCartRequest {
  string user_id = 1;
}

message Cart {
  string user_id = 1;
  repeated CartItem items = 2;
}

message Empty {}

// New message definitions for the GetCartTotalWithDiscount method
message GetCartTotalWithDiscountRequest {
  string user_id = 1;
}

message GetCartTotalWithDiscountResponse {
  double total_amount = 1;
}
